style.css
#neubar {
    background-image: url('https://cdn.dribbble.com/users/1936570/screenshots/15671618/media/8b5f68528a7089ad95e2cb9a98f3977f.gif');
    box-shadow: 5px 25px 50px rgba(0, 0, 0, 0.9);
}

.nav-item .active {
    border-radius: 6px;
    font-size: larger;
    /* background: linear-gradient(145deg, rgba(201, 201, 201, 0.75), rgba(255, 255, 255, 1)); */
    /* box-shadow:  4px 4px 8px #ddc1a0,
                 -4px -4px 8px #f7e5cc; */
}

#neubar .dropdown-menu a:hover {
    color: #454545
}

#neubar .nav-item {
    margin: auto 4px;
}

#neubar a {
    color: white;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 12px;
}

#neubar .dropdown-menu {
    background: #545454
}

a.navbar-brand {
    color: #454545
}

.centerh {
    display: flex;
    align-items: center;
    justify-content: center;
}

.centerv {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
}

body {
    margin: 0;
    width: 100vw;
    overflow-x: hidden;
    background-color: #f0f0f0;
    font-size: 14.5px;
    line-height: 1.4em;
    color: #404646;
}

* {
    box-sizing: border-box;
}

.containerrr {
    min-height: 100%;
    width: 100%;
    margin: auto;
    padding: 1.6em;
    display: grid;
    justify-content: center;
    align-content: start;
    grid-gap: 1.6em;
    grid-template: auto / repeat(auto-fill, minmax(27em, 27em));
}

.carddd {
    border-radius: 1rem;
    margin: 0;
    height: 17em;
    display: flex;
    background-color: var(--bs-dark);
    box-shadow: 1px 3px 3px rgba(0, 10, 20, 0.06);
}

.carddd img {
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 1rem;
    height: 100%;
    width: 128px;
    max-width: 100%;
    object-fit: cover;
    flex: 1 1 auto;
}

.carddd-body {
    width: 12em;
    max-height: 100%;
    flex: 1 1 auto;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    padding: 1.6em;
}

.carddd-body button {
    min-width: 8.3em;
    flex: none;
    align-self: flex-start;
    margin-top: auto;
    padding: 0.6em 1.2em;
    font-size: 0.92em;
    /*  */
    display: inline-block;
    line-height: 1.5;
    color: #212529;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: 0.25rem;
    /*  */
    color: #fff;
    background-color: #0d6efd;
    border-color: #0d6efd;
}

.carddd-body a {
    min-width: 8.3em;
    flex: none;
    align-self: flex-start;
    background: none;
}

.carddd-body button:hover {
    color: white;
    background-color: #3284ff;
    border-color: #3284ff;
}

.carddd-text {
    position: relative;
    flex: 1;
    overflow: hidden;
    text-overflow: ellipsis;
    margin: 0 0 0.8em 0;
    padding: 0;
    color: white;
}

.carddd-text h3,
.carddd-text p {
    margin-top: 0;
}

.carddd-text:after {
    position: absolute;
    bottom: 0;
    content: "";
    width: 100%;
    height: 2.8em;
    background: linear-gradient(rgba(255, 255, 255, 0), var(--bs-dark));
}



@media (max-width: 570px) {
    .containerrr {
        grid-template: auto / 1fr;
        padding: 1.0666666667em;
    }

    .carddd {
        flex: 1 1 auto;
        display: flex;
        background-color: var(--bs-dark);
        box-shadow: 1px 3px 3px rgba(0, 10, 20, 0.06);
    }

    .carddd img {
        max-width: 50%;
    }
}

